# aoc

./: .gitignore  Cargo.toml
2022/day-1/src/: input.txt  main.rs
2022/day-10/: Cargo.toml
2022/day-10/src/: main.rs
2022/day-11/: Cargo.toml
2022/day-11/src/: main.rs
2022/day-12/: Cargo.toml
2022/day-12/src/: main.rs
2022/day-13/: Cargo.toml
2022/day-13/src/: main.rs
2022/day-14/: Cargo.toml
2022/day-14/src/: main.rs
2022/day-2/src/: main.rs
2022/day-3/: Cargo.toml
2022/day-3/src/: main.rs
2022/day-4/: Cargo.toml
2022/day-4/src/: main.rs
2022/day-5/: Cargo.toml
2022/day-5/src/: input.txt  main.rs
2022/day-6/: Cargo.toml
2022/day-6/src/: lib.rs  main.rs
2022/day-7/: Cargo.toml
2022/day-7/src/: main.rs
2022/day-8/: Cargo.toml
2022/day-8/src/: main.rs
2022/day-9/: Cargo.toml
2022/day-9/src/: main.rs
2023.2/: Cargo.toml
2023.2/src/: day1_1.rs  day1_2.rs  lib.rs
2023/day-1/: Cargo.toml
2023/day-1/src/: main.rs
2023/day-2/: Cargo.toml
2023/day-2/proptest-regressions/: main.txt
2023/day-2/src/: main.rs
2023/day-3/: Cargo.toml
2023/day-3/src/: main.rs
2024/: Cargo.toml
2024/src/: day1.rs  day10.rs  day11.rs  day2.rs  day5.rs  day7.rs  day8.rs  day9.rs  lib.rs
2025/: Cargo.toml
2025/benches/: day2.rs
2025/data/: day1.txt
2025/src/: day1.rs  day2.rs
src/: day1.rs  day2.rs  day3.rs  day4.rs  day6.rs
