[workspace]

members = [
    "2022/day-1",
    "2022/day-2",
    "2022/day-3",
    "2022/day-4",
    "2022/day-5",
    "2022/day-6",
    "2022/day-7",
    "2022/day-8",
    "2022/day-9",
    "2022/day-10",
    "2022/day-11",
    "2022/day-12",
]

[workspace.dependencies]
im = "15.1.0"
itertools = "0.10.5"
nom = "7.1.1"
test-case = "2.2"