[workspace]
resolver = "2"

members = [
    "2022/day-1",
    "2022/day-2",
    "2022/day-3",
    "2022/day-4",
    "2022/day-5",
    "2022/day-6",
    "2022/day-7",
    "2022/day-8",
    "2022/day-9",
    "2022/day-10",
    "2022/day-11",
    "2022/day-12",
    "2022/day-13",
    "2023/day-1",
    "2023/day-2",
    "2023/day-3", "2023.2", "2024","2025",
]

[workspace.dependencies]
im = "15.1"
itertools = "0.14"
nom = "7"
test-case = "3.3.1"
