[package]
name = "day-3-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { workspace = true }
test-case = { workspace = true }
itertools = { workspace = true }
proptest = "1.4.0"
strum = { version = "0.25.0", features = ["derive"] }
